--- a/style.css
+++ b/style.css
@@ -78,9 +78,9 @@ input {
     border: 1px dotted #ccc; 
     background: white; 
     font-family: "Baskerville"; 
-    padding: 10px 20px; 
+    padding: 5px 5px; 
     font-size: 14px; 
-    margin: 20px 10px 20px 0; 
+    margin: 0 10px 0 0; 
     color: black;
     box-shadow: 5px 5px 10px rgba(0,0,0,0.1);
 }
@@ -158,6 +158,66 @@ instruction {
     align-content: stretch;
 }
 
+#pagecounter {
+    position: absolute;
+    bottom: 5vh;
+    left: 5vh;
+    color: grey;
+    font-family: moon;
+    font-size: 36;
+}
+
+#questionholder {
+    position: absolute;
+    bottom: 5vh;
+    right: 5vh;
+}
+
+#question-icon:hover {
+    border: rgba(255,255,255, 1);
+}
+
+
+#question-icon {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 5vh;
+    width: 5vh;
+    border-radius: 2.5vh;
+    background-color: white;
+    border: 4px solid rgba(200,200,200, 1);
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.1);
+    background: white;
+    padding-bottom:2px;
+    cursor: pointer;
+    transition: 0.2s;
+    font-weight: 800;
+    color: grey;
+    display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+    align-content: stretch;
+    z-index: 1;
+}
+
+#question-answer {
+    z-index: 100;
+    width: 30vw;
+    height: 20vh;
+    display: block;
+    background: white;
+    border-radius: 2.5vh;
+    opacity: 1;
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.1);
+    padding: 2vh;
+}
+
+#nodeCounter {
+    font-size: 15px;
+}
 
 circle {
     fill: #ccc;
