v4 - Demo #2 - Exam Version

--- a/style.css
+++ b/style.css
@@ -186,6 +186,10 @@ playground {
 	align-items: flex-start;
 }
 
+#project-intro{
+    width: 50vw;
+}
+
 guide {
     position: fixed;
     max-width: 40vw;
