--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 body {
-    font-family: "roberto"; 
+    font-family: "helvetica";
     line-height: 160%; 
     font-size: 18px; 
     align-items: center;
@@ -32,13 +32,17 @@ svg {
 /*    position: fixed;*/
 }
 
+h2{
+    position: center; 
+    font-family: ""
+}
+
 h3 {
     font-family: moon;
 }
 
 h4 {
     font: 15px moon;
-    
 }
 
 h5 {
@@ -46,8 +50,12 @@ h5 {
     font-style: italic;
 }
 
+p {
+    font-family: helvetica;
+}
+
 #myInput {
-    font-family: roberto;
+    font-family: roboto;
 }
 header{
     position: fixed;
@@ -174,7 +182,7 @@ central-content {
 }
 
 .container {
-    font-family: "roberto";
+    font-family: ;
     background-color: transparent;
     font-weight: 500;
     font-size: 22px;
@@ -230,7 +238,7 @@ analysis {
     align-content: flex-start;
     
     z-index: 8;
-    opacity: 0.7;
+    opacity: 0.6;
 }
 
 .feature {
@@ -338,10 +346,6 @@ circle {
     fill: aliceblue;
     stroke: aliceblue;
     stroke-width: 1.5px;
-}
-
-h2{
-    position: center; 
 }
 
 text {
