--- a/style.css
+++ b/style.css
@@ -14,6 +14,18 @@
     src: url("fonts/Moon Bold.otf");
 }
 
+@media only screen and (device-width: 768px) {
+  /* For general iPad layouts */
+}
+
+@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
+  /* For portrait layouts only */
+}
+
+@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) {
+  /* For landscape layouts only */
+}
+
 body {
     font-family: "helvetica";
     line-height: 160%; 
