--- a/style.css
+++ b/style.css
@@ -27,15 +27,15 @@
 }
 
 body {
-    font-family: "helvetica";
+    font-family: "Myriad Pro";
     line-height: 160%; 
     font-size: 18px; 
     align-items: center;
     justify-content: center;
     margin-top: 80px;
     margin-bottom: 0;
-    background-color: midnightblue;
-    color: aliceblue;
+    background-color: #FDEDEC;
+    color: #5F6A6A;
 }
 
 svg {
@@ -46,7 +46,12 @@ svg {
 
 h2{
     position: center; 
-    font-family: ""
+}
+
+#intro-text{
+    font-size: 22px;
+    font-family: "Text Me One";
+    font-weight: normal;
 }
 
 h3 {
@@ -63,7 +68,8 @@ h5 {
 }
 
 p {
-    font-family: helvetica;
+    font-family: "Text Me One";
+    font-weight: 100;
 }
 
 #myInput {
@@ -73,13 +79,13 @@ header{
     position: fixed;
     width: 100%;
     z-index: 8;
-    
+
     top: 0;
     left: 0;
     right: 0;
     height: 200px;
     
-    background-color: midnightblue;
+/*    background-color: #FDEDEC;*/
     
     display: flex;
     align-items: center;
@@ -92,8 +98,10 @@ header{
 
 
 header img{
-    height: 140px;
+    height: 280px;
+    margin-top: 200px;
     margin-left: 40px;
+    margin-bottom: 40px;
     justify-content: center;
 }
 
@@ -137,6 +145,12 @@ input:toggle {
     outline: none;
 }
 
+nav *{
+    flex-direction: column;
+	flex-wrap: nowrap;
+    font-family: "Text Me One;
+}
+
 holder{
     position: absolute;
     width: 100%;
@@ -172,9 +186,9 @@ central-content {
 
 .content {
     position: absolute;
-    top: 30vh;
+    top: 38vh;
     width: 80%;
-    background: midnightblue; 
+    background: #FDEDEC; 
     display: flex;
     flex-flow: row nowrap;
 	justify-content: center;
@@ -269,11 +283,12 @@ analysis {
 .button {
 /*    min-height: 12vh;*/
     font-family: "moon";
+    font-size: 16px;
     font-weight: 500;
     background-color: transparent;
-    opacity: 0.5;
+    opacity: 0.3;
     width: 10vw;
-    transition: 0.3s;
+    transition: 0.2s;
     cursor: pointer;
     margin: 2vh 2vw 2vh 2vw;
 
@@ -319,7 +334,7 @@ analysis {
     width: 5vh;
     border-radius: 2.5vh;
     background-color: transparent;
-    border: 4px solid rgba(200,200,200, 1);
+    border: 2px solid rgba(200,200,200, 0.5);
     box-shadow: 5px 5px 10px rgba(0,0,0,0.1);
     background: transparent;
     padding-bottom:2px;
@@ -354,15 +369,16 @@ analysis {
 }
 
 circle {
-    fill: aliceblue;
-    stroke: aliceblue;
+    fill: coral;
+    opacity: 0.7;
+/*    stroke: aliceblue;*/
     stroke-width: 1.5px;
 }
 
 text {
       font: 11px "helvetica";
       pointer-events: none;
-      color: aliceblue;
+      color: #5F6A6A;
       text-shadow: 0 1px 0 aliceblue, 1px 0 0 aliceblue, 0 -1px 0 aliceblue, -1px 0 0 aliceblue;
       width: 5px;
 }
@@ -410,13 +426,13 @@ textarea {
     padding: 5px 5px; 
     font-size: 14px; 
     margin: 0 10px 0 0; 
-    color: aliceblue;
+    color: #5F6A6A;
 }
 questionaire {
 /*    padding-top: 30px;*/
     width: 100%;
     line-height: 15px;
-    background-color: midnightblue;
+    background-color: #FDEDEC;
 }
 
 label {
