V4: Fixed app and styles

--- a/style.css
+++ b/style.css
@@ -26,9 +26,11 @@
   /* For landscape layouts only */
 }
 
+
+
+
 body {
     font-family: "Montserrat";
-    font-family: "Myriad Pro";
     line-height: 160%; 
     font-size: 18px; 
     align-items: center;
@@ -36,46 +38,15 @@ body {
     margin-top: 80px;
     margin-bottom: 0;
     background-color: #FDEDEC;
-    color: #5F6A6A;
+    color: #333300;
 }
 
 svg {
     margin-top: 100px;
     z-index: 10;
-/*    position: fixed;*/
 }
 
-h2{
-    position: center; 
-}
 
-#intro-text{
-    font-size: 22px;
-    font-family: "Text Me One";
-    font-weight: normal;
-}
-
-h3 {
-    font-family: moon;
-}
-
-h4 {
-    font: 15px moon;
-}
-
-h5 {
-    font-size: 16px;
-    font-style: italic;
-}
-
-p {
-    font-family: "Text Me One";
-    font-weight: 100;
-}
-
-#myInput {
-    font-family: roboto;
-}
 
 header{
 position: fixed;
@@ -94,12 +65,14 @@ position: fixed;
 
 }
 
+/*
 header li{
-/*    display: inline-block;*/
+    display: inline-block;
 
     font-family: "Moon Bold"; 
-    margin: 20px;
+    
 }
+*/
 header img{
     height: 80px;
 
@@ -112,32 +85,106 @@ header * {
     display: inline;
 }
 
-heading {
-    padding: 15vw 2vw 0 5vh;
+
+
+/*----------------------------------------------------*/
+
+
+
+#title {
+    padding-bottom: 50px;
+    height: 100%;
+    vertical-align: middle;
+}
+
+nav {
+    font-family: "Moon Bold"; 
+    display: inline;
+    margin: 20px;
+    display: flex;
     align-items: center;
 }
 
 #title-image {
-    width: 500px;
-/*    padding-bottom: 50px;*/
+    width: 1000px;
+    padding-top: 80px;
+    padding-left: 200px;
+/*    padding-bottom: 150px;*/
 }
 
-#title {
-    padding-bottom: 50px;
+#title-line{
+   line-height: 150%; 
+   width: 1500px;
+   padding: 80px;
+    text-align: center;
 }
 
-#tutorialimg8{
-/*    max-width: 70%;*/
-    display: block;
-    max-width: 80%;
+quote {
+    width:50vw;
+    font-style: italic;
+    font-family: "Playfair";
+    font-size: 35px;
+    line-height: 120%;
+    padding: 100px 10px; 
+    text-align: center;
+    opacity: 0.6;
 }
 
-#tutorialimg9{
-/*    max-width: 70%;*/
-    display: block;
-    max-width: 100%;
+
+button {
+    min-height: 3vh;
+    width: auto;
+    font-family: "moon bold";
+    font-size: 26px;
+    font-weight: 500;
+/*    color: #669999;*/
+/*    border-color: #669999;*/
+    color:aliceblue;
+    background-color: #669999;
+    opacity: 0.6;
+    width: 10vw;
+    transition: 0.2s;
+    cursor: pointer;
+    margin: 2vh 2vw;
+/*    border: 2px solid #669999;*/
+    border-radius: 20px;
+/*    display: flex;*/
+/*	justify-content: center;*/
+/*	align-items: center;*/
+
 }
 
+button:hover {
+    opacity: .9;
+
+    border-radius: 50px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+
+}
+
+button a {
+  color: aliceblue;
+}
+
+/*----------------------------------------------------*/
+
+.function {
+    font-weight: 600;
+}
+
+.solution {
+    font-weight: 500;
+}
+
+#security {
+    font-style: italic;
+    color: #669999;
+}
+
+#our-story {
+    width: 80%;
+    padding-top: 70px;
+}
 
 input {
 /*    border: 1px dotted #ccc; */
@@ -170,11 +217,13 @@ h3 {
     font-weight: 300;
     line-height: 180%;
 }
-nav *{
-    flex-direction: column;
-	flex-wrap: nowrap;
-    font-family: "Text Me One;
+
+/*text*/
+#myInput {
+    font-family: Montserrat;
 }
+
+
 
 holder{
     position: absolute;
@@ -188,21 +237,13 @@ holder{
     align-content: stretch;
 }
 
-quote {
-    width:50vw;
-    font-style: italic;
-    font-family: "Century";
-    font-size: 29px;
-    line-height: 120%;
-    padding: 200px 10px; 
-}
+
 
 central-content {
     position: relative;
     z-index: 5;
     width:90vw;
     background: transparent;
-    padding: 15vw 2vw 0 5vh;
     margin-bottom: 2vh;
     transition: 0.3s;
 
@@ -217,7 +258,6 @@ central-content {
 .content {
     position: absolute;
     top: 1vh;
-    top: 38vh;
     width: 80%;
     background: #FDEDEC; 
     display: flex;
@@ -322,28 +362,7 @@ analysis {
     width: 120px;
 }
 
-button {
-/*    min-height: 12vh;*/
-    font-family: "moon bold";
-    font-family: "moon";
-    font-size: 16px;
-    font-weight: 500;
-    background-color: transparent;
-    opacity: 0.3;
-    width: 10vw;
-    transition: 0.2s;
-    cursor: pointer;
-    margin: 2vh 2vw 2vh 2vw;
 
-/*    display: flex;*/
-/*	justify-content: center;*/
-/*	align-items: center;*/
-
-}
-
-button:hover {
-    opacity: 1;
-}
 
 .active {
     color: coral;
@@ -354,7 +373,6 @@ button:hover {
     position: absolute;
     bottom: 5vh;
     left: 5vh;
-    font-family: moon;
     font-size: 36;
 }
 
@@ -470,7 +488,6 @@ textarea {
     border: 1px dotted #ccc; 
     border: none;
     background: white; 
-    font-family: Moon; 
     padding: 5px 5px; 
     font-size: 14px; 
     margin: 0 10px 0 0; 
